--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,5 @@
 theme: remote_theme: pages-themes/cayman@v0.2.0
 plugins:
 - jekyll-remote-theme
-title: ZhangPeiJie's webpage for bioinformatics course in THU
+title: ZhangPeiJie webpage
+description: For bioinformatics course in THU only
