--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
+title: ZhangPeiJie's Homework Webpage
+description: For bioinformatics course in THU only & To be continued
 theme: jekyll-theme-cayman
-title: [For bioinformatics course in THU only]
