--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: ZhangPeiJie's Homework Webpage
-description: For bioinformatics course in THU only & To be continued
+description: To be continued & For bioinformatics course in THU only
 theme: jekyll-theme-cayman
