--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 title: ZhangPeiJie's Homework Webpage
-description: To be continued & For bioinformatics course in THU only
+description: To be continued & For bioinformatics course only
 theme: jekyll-theme-cayman
